[package]
name = "bancho-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
bancho-packets = "5.3.1"
bitreader = "0.3.7"
byteorder = "1.4.3"
dotenv = "0.15.0"
reqwest = { version = "0.11.18", features = ["blocking","cookies"] }
argh = "0.1.10"
md5 = "0.7.0"
